<resources>
    <string name="app_name">SnapText</string>
    <string name="sent_via_sanptext">Sent via SnapText</string>
    <string name="action_settings">Settings</string>

    <string name="wechat_friend">Wechat</string>
    <string name="wechat_moment">Moments</string>
    <string name="share">Share more...</string>
    <string name="save">Save</string>
    <string name="saved">Snap saved to Gallery Pictures folder.</string>
    <string name="cancel">Cancel</string>

    <string name="date_format_title">MMM.d yyyy</string>
    <string name="date_format">M/d/yyyy K:mm a</string>
    <string name="snap_from">From</string>

    <string name="failed_share_snap">Failed to share snap.</string>

    <string name="pref_service_settings_title">Service Settings</string>
    <string name="pref_snaptext_summary">Enable SnapText service to monitor clipboard</string>
    <string name="pref_snaptext_title">SnapText Service</string>

    <string name="pref_other_settings_title">Others</string>
    <string name="pref_app_usage_summary">Enable check apps usage accessing to get copy source</string>
    <string name="pref_app_usage_title">Get Copy Source</string>
    <string name="version">Version</string>

    <string name="pref_app_info">SnapText converts any texts copied from any apps into a picture, to save or share it.</string>
    <string name="feedback_email">Feedback</string>
    <string name="email_subject">[SnapText] - Feedback</string>
    <string name="email_sending">Send email...</string>
    <string name="no_email_client">No email clients installed.</string>
    <string name="enable_usage_access_alert">Please click "SnapText" and check ON Permit usage access in next screen.</string>
</resources>
